# skillforge

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  install.sh  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  test.yml
action/: action.yml
benchmarks/anti-gaming/: run.py  test_benchmark.py
benchmarks/anti-gaming/skills/: bloated-preamble.md  contradiction-skill.md  fake-examples.md  inflated-headers.md  keyword-stuffing.md  no-scope.md
commands/skillforge/: analyze.md  auto.md  bench.md  doctor.md  eval.md  init.md  log-failure.md  mesh.md  report.md  triage.md  update.md
demo/: auto-improve-output.txt  dashboard-output.txt  doctor-output.txt  init-output.txt  record-demo-pty.py  record-demo-v2.sh  record-demo-v7.sh  record-demo.sh  schliff-demo.cast  skillforge-demo.cast  social-preview.html  terminal-demo.html
demo/bad-skill/: SKILL.md
demo/sample-cursorrules/: .cursorrules
demo/sync-conflict/: .cursorrules  CLAUDE.md
docs/: ARCHITECTURE.md  CLAUDE_CODE_HANDOFF.md  SCHLIFF_DEEP_ANALYSIS.md  SCHLIFF_FINAL_REPORT.md  SCORING.md  SKILLFORGE_DEEP_ANALYSIS.md  SKILLFORGE_FINAL_REPORT.md
docs/case-studies/shieldclaw/: SKILL-after.md  SKILL-before.md  baseline-score.json  case-study.json  eval-suite.json  optimized-score.json
docs/specs/: 2026-03-26-v7-design.json  show-hn-draft.md  viral-growth-next-steps.md  viral-growth-plan.yaml
docs/specs/plans/: v7-revised-plan.json
playground/api/: score.py
playground/public/: index.html
skills/schliff/: SKILL.md  eval-suite.json
skills/schliff/.schliff/: failures.jsonl
skills/schliff/scripts/: auto-improve.py  cli.py  doctor.py  drift.py  episodic_store.py  init-skill.py  report.py  score-skill.py  score_skill.py  shared.py  skill_mesh.py  sync.py  terminal_art.py  test-self.sh  text_gradient.py  track.py  verify.py
skills/schliff/scripts/scoring/: clarity.py  composability.py  composite.py  diff.py  efficiency.py  formats.py  patterns.py  runtime.py  security.py  structure.py  triggers.py
skills/schliff/tests/unit/: test_cli.py  test_cli_diff.py  test_cli_new.py  test_compare.py  test_composite_weights.py  test_diff_scoring.py  test_doctor.py  test_doctor_multiformat.py  test_drift.py  test_edge_cases.py  test_formats.py  test_golden.py  test_init_skill.py  test_normalization.py  test_patterns.py  test_regression_v71.py  test_report.py  test_scoring.py  test_security.py  test_stress.py  test_suggest.py  test_sync.py  test_terminal_art.py  test_tokens.py  test_track.py  test_trigger_precision_recall.py  test_verify.py
skills/skillforge/: SKILL.md  eval-suite.json
skills/skillforge/hooks/: hooks.json  session-injector.js
skills/skillforge/references/: improvement-protocol.md  metrics-catalog.md  skill-patterns.md  state-management.md
skills/skillforge/scripts/: achievements.py  analyze-skill.sh  auto-improve.py  dashboard.py  doctor.py  episodic-store.py  episodic_store.py  generate-report.py  init-skill.py  meta-report.py  meta_report.py  nlp.py  parallel-runner.py  parallel_runner.py  progress.py  run-eval.sh  runtime-evaluator.py  score-skill.py  score_skill.py  shared.py  skill-mesh.py  skill_mesh.py  terminal_art.py  test-integration.sh  test-self.sh  text-gradient.py  text_gradient.py
skills/skillforge/scripts/scoring/: __init__.py  clarity.py  coherence.py  composability.py  composite.py  diff.py  edges.py  efficiency.py  patterns.py  quality.py  runtime.py  structure.py  triggers.py
skills/skillforge/templates/: eval-suite-template.json  improvement-log-template.jsonl  improvement-log-template.tsv
skills/skillforge/tests/proof/: bad-eval-suite.json  bad-skill.md  test-proof.sh
skills/skillforge/tests/unit/: conftest.py  test_scoring.py  test_shared.py
web/leaderboard/: index.html  vercel.json
web/leaderboard/api/: query.py  submit.py
web/leaderboard/data/: submissions.json
web/playground/: index.html  vercel.json
web/playground/demos/: good-skill.txt  sample-claude.txt  sample-cursorrules.txt  shieldclaw-after.txt  shieldclaw-before.txt
