[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "schliff"
version = "6.0.0"
description = "Autonomous skill improvement and measurement framework for Claude Code"
license = {text = "MIT"}
requires-python = ">=3.9"
readme = "README.md"
keywords = ["claude-code", "skills", "scoring", "evaluation", "autonomous-improvement"]
authors = [
    {name = "Franz Paul"}
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

[project.scripts]
schliff = "skills.schliff.scripts.cli:main"

[project.urls]
Repository = "https://github.com/Zandereins/schliff"
Issues = "https://github.com/Zandereins/schliff/issues"
Changelog = "https://github.com/Zandereins/schliff/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["skills*"]

[tool.setuptools.package-data]
"skills" = ["**/*.md", "**/*.json", "**/*.sh", "**/*.js", "**/*.yml"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["scoring", "shared", "nlp"]
